src/objects/ssh_User_Contact_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Custom setting used to determine the record type being used for Employee vs Vendor Contacts. Also determines the name of the default internal account vs vendor account to which Contacts should belong after they are initially generated.</description>
    <fields>
        <fullName>Employee_Record_Type__c</fullName>
        <description>The record type for all AECOM employees</description>
        <label>Employee Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Vendor_Record_Type__c</fullName>
        <description>The record type for all External Vendors</description>
        <label>External Vendor Record Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Vendor_Uncategorized_Account__c</fullName>
        <description>Default Account to which External Vendor Contacts will be assigned since we don&apos;t know what account they belong to.</description>
        <label>External Vendor Uncategorized Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_User_Account__c</fullName>
        <description>Name of the Account with which all Contacts created for internal AECOM Users will be associated.</description>
        <label>Internal User Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>SS-AP User/Contact Settings</label>
</CustomObject>